# V3

./: .dockerignore  .env.example  .gitignore  70  API_KEY_SETUP.md  CLAUDE.md  DEPLOY.md  Dockerfile  HardwarePipeline_FINAL_v3.pptx  Hardware_Pipeline_V2_Demo_Guide.docx  IMPLEMENTATION_PLAN.md  INSTALL.bat  MANUAL_PPTX_UPDATE_GUIDE.md  MASTER_PLAN.md  Makefile  QUICK_START.md  SETUP.md  SLIDE_REVIEW_NOTES.md  TECHNICAL_COMPONENT_INVENTORY.md  TESTING_GUIDE.md  app.py  architecture_6ant_4ch.html  bundle_and_escape.py  config.py  coverage.json  dashboard-lab.html  deploy.bat  deploy.sh  diagnose.bat  docker-compose.prod.yml  docker-compose.yml  gain_loss_budget_preview.html  gain_loss_budget_wideband_preview.html  gain_loss_budget_wideband_preview.md  logging_config.py  main.py  mermaid_renderer.js  observability.py  patch_bundle_p7.py  power_calculation_sample.html  (+15 more)
agents/: base_agent.py  code_agent.py  compliance_agent.py  critic.py  critic_agent.py  document_agent.py  fpga_agent.py  git_agent.py  glr_agent.py  netlist_agent.py  orchestrator.py  qt_baseline.py  qt_cpp_gui_generator.py  qt_gui_generator.py  rdt_psq_agent.py  red_team_audit.py  requirements_agent.py  rtl_components.py  rtl_coverage.py  rtl_tailored.py  sbom_generator.py  sdd_agent.py  srs_agent.py  static_analysis.py
bugs/: BUG_LOG.md
data/: pin_maps.json  reach_svhc.json  rohs_substances.json  sample_components.json
database/: __init__.py  models.py
docs/: DEMO_CHEAT_SHEET.md  RF_SYSTEM_DESIGN.md  ablation_matrix.md  air_gap_rehearsal.md  architecture_overview.md  competitive_landscape.md  datasheet_sweep_latest.json  datasheet_sweep_latest.md  eval_report_week1.md  eval_rubric.md
domains/: __init__.py  _schema.py  standards.json  standards.py
eval_results/: ablation_1776488033.json  baseline_1776486558.json  baseline_1776487987.json
frontend/: bundle.html
generators/: __init__.py  code_reviewer.py  driver_generator.py  glr_generator.py  hrs_generator.py  kicad_netlist.py  netlist_generator.py  sdd_generator.py  srs_generator.py
hardware-pipeline-v5-react/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts  vite.config.ts.timestamp-1776251623021-1b347909a38f7.mjs  vite.config.ts.timestamp-1776335675440-37f3bba614b54.mjs  vitest.config.ts
migrations/: 001_requirements_lock.sql  002_pipeline_runs_llm_calls.sql  003_design_scope.sql  004_project_type.sql  __init__.py
nginx/: nginx.conf
plans/: P18-dashboard-holographic-landing.md
reference/: hackathon_presentation_playbook.md  hardware-pipeline-v5.html  plan_claude.txt  prev_conversation.txt
rules/: __init__.py  banned_parts.py  fcc_rules.py  reach_rules.py  rohs_rules.py
schemas/: __init__.py  component.py  component_spec.py  netlist.py  project.py  project_brief.py  requirements.py
scripts/: demo_distributor_lookup.py  demo_parametric_search.py  expand_clause_db.py  expand_component_db.py  refresh_datasheet_urls.py  reproduce_run.py  run_ablation_matrix.py  run_baseline_eval.py  run_full_eval.py  run_golden.py  sanitise_existing_outputs.py  seed_component_cache.py  verify_datasheets.py  verify_rtl_tailoring.py
services/: __init__.py  chat_service.py  component_cache.py  component_spec_resolver.py  datasheet_extractor.py  deliverable_bundler.py  doc_export.py  elicitation_state.py  glb_optimizer.py  llm_logger.py  llm_logging.py  output_fingerprint.py  p1_finalize.py  phase_catalog.py  phase_scopes.py  pipeline_service.py  project_brief_builder.py  project_reset.py  project_service.py  requirements_lock.py  rf_audit.py  stale_phases.py  storage.py
static/: style.css
templates/: hrs_template.md  sdd_template.md  srs_template.md
tests/: conftest.py  test_agents.py  test_base_agent.py  test_bom_link_labels.py  test_bom_probe_shortcircuit.py  test_cascade_validator.py  test_chat_docs_diagram_parity.py  test_component_search.py  test_config.py  test_cosite_imd.py  test_critic.py  test_critic_agent.py  test_datasheet_verify.py  (+23 more)
(+234 files in other folders)
